--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
     "fs-extra": "^10.0.0",
+    "image-conversion": "^2.1.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.5",
     "mongoose-aggregate-paginate-v2": "^1.0.5",
@@ -37,7 +38,7 @@
     "nodemailer-express-handlebars": "^4.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "prismjs": "^1.24.1",
+    "prismjs": "^1.25.0",
     "request": "^2.88.2",
     "stripe": "^8.174.0",
     "tags-input": "^1.1.1",
