--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "dotenv": "^10.0.0",
     "email-templates": "^8.0.8",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.2",
     "fs-extra": "^10.0.0",
     "image-conversion": "^2.1.1",
+    "image-convert": "^0.1.33",
     "method-override": "^3.0.0",
     "mongoose": "^5.13.5",
     "mongoose-aggregate-paginate-v2": "^1.0.5",
@@ -40,6 +42,7 @@
     "passport-local": "^1.0.0",
     "prismjs": "^1.25.0",
     "request": "^2.88.2",
+    "sharp": "^0.29.2",
     "stripe": "^8.174.0",
     "tags-input": "^1.1.1",
     "trumbowyg": "^2.25.1",
